<resources>
    <string name="app_name">Android-Application-Basics-HW</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Page</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello Android</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_button_placeholder">Enter something …</string>
    <string name="first_button_name">ADD</string>
    <string name="add_button_name">ADD</string>
    <string name="reset_button_name">RESET</string>
    <string name="undo_button_name">UNDO</string>
    <string name="input_name">Enter some text …</string>
</resources>